Añadida una clase provisional "Producto" junto con la pantalla de información de producto (no terminado). La pantalla de inventario ahora funciona correctamente con lo de las páginas.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
-        <exec.mainClass>com.boquerontech.supermercadoboqueron.login.Login</exec.mainClass>
+        <!--<exec.mainClass>com.boquerontech.supermercadoboqueron.login.Login</exec.mainClass>-->
+        <exec.mainClass>com.boquerontech.supermercadoboqueron.Inicio</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
