--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>24</maven.compiler.release>
-        <!--<exec.mainClass>com.boquerontech.supermercadoboqueron.login.Login</exec.mainClass>-->
-        <exec.mainClass>com.boquerontech.supermercadoboqueron.Inicio</exec.mainClass>
+        <maven.compiler.release>21</maven.compiler.release>
+        <exec.mainClass>com.boquerontech.supermercadoboqueron.login.Login</exec.mainClass>
+        <!--<exec.mainClass>com.boquerontech.supermercadoboqueron.Inicio</exec.mainClass>-->
     </properties>
     <dependencies>
         <dependency>
