Implementacion de informes, arreglo en base de datos, solucion de bugs, creacion de DAO´s y clases para la union con la base de datos

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
             <scope>compile</scope>
         </dependency>
         
+        <dependency>
+        <groupId>net.sf.jasperreports</groupId>
+        <artifactId>jasperreports</artifactId>
+        <version>6.21.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>net.sf.jasperreports</groupId>
+        <artifactId>jasperreports-fonts</artifactId>
+        <version>6.21.0</version>
+    </dependency>
+        
         <!-- Source: https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
